# advent-of-code

./: .gitignore  README.md  pyproject.toml
2021/day1/: day1.ipynb
2021/day2/: day2.ipynb
2021/day3/: day3.ipynb
2021/day4/: day4.ipynb
2021/day5/: day5.ipynb
2021/day7/: day7.ipynb
2021/day8/: day8.ipynb
2022/day1/: day1.ipynb
2022/day10/: day10.ipynb
2022/day12/: day12.ipynb
2022/day15/: day15.ipynb
2022/day2/: day2.ipynb
2022/day3/: day3.ipynb
2022/day4/: day4.ipynb
2022/day5/: day5.ipynb
2022/day6/: day6.ipynb
2022/day7/: day7.ipynb
2022/day8/: day8.ipynb
2022/day9/: day9.ipynb
2023/day1/: day1.ipynb
2023/day15/: day15.ipynb
2023/day2/: day2.ipynb
2023/day3/: day3.ipynb
2023/day4/: day4.ipynb
2023/day5/aoc-day5/: pom.xml
2023/day5/aoc-day5/src/main/java/fr/ttk/aoc/: AlmanacFactory.java  AlmanacMap.java  AlmanacRange.java  AlmanacRangeTransformer.java  SimpleMap.java  SimpleRange.java  SimpleRangeTransformer.java
2023/day5/aoc-day5/src/test/java/fr/ttk/aoc/: Day5.java  RangeMapTest.java  RangeTest.java  RangeTransformerTest.java
2023/day6/: day6.ipynb
2024/day1/: day1.ipynb
2024/day10/: day10.ipynb
2024/day11/: day11.ipynb
2024/day2/: day2.ipynb
2024/day3/: day3.ipynb
2024/day4/: day4.ipynb
2024/day5/: day5.ipynb
2024/day6/: day6.ipynb
2025/day1/: day1.ipynb
2025/day2/: day2.ipynb
2025/day3/: day3.ipynb
2025/day4/: day4.ipynb
