[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent Of Code"
authors = ["Thomas Pfeiffer <thomas.pfeiffer.e@thalesdigital.io>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
