[tool.poetry]
name = "advent-of-code"
version = "0.2.0"
description = "Advent Of Code"
authors = ["Thomas Pfeiffer <thomas.pfeiffer.e@thalesdigital.io>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.8"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
